--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "sass": "^1.85.1",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
